Add cities page

--- a/app/assets/stylesheets/revised/pages/landing/_signup.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_signup.scss
@@ -14,7 +14,7 @@
 }
 
 $landing-page-targets: "shop", "school", "advocacy", "law_enforcement",
-  "ambassadors-how-to", "ambassadors-current", "campus-packages",
+  "cities", "ambassadors-how-to", "ambassadors-current", "campus-packages",
   "cities-packages";
 
 @each $target in $landing-page-targets {
