--- a/app/views/landing_pages/for_cities.haml
+++ b/app/views/landing_pages/for_cities.haml
@@ -10,56 +10,50 @@
           %h1
             Bike Index for Cities
           %h3
-            TBD
+            Actually get people registered. And do it for cheap.
+          %h3
+            Plug your city in nationally.
 
   .container
     .row.main-body-row
       .landing-why-col
         %h3
-          Recover your citizen's bikes
+          Mitigate the registration mess
 
         %p
-          You're the first one your citizens look to when their bikes are
-          stolen. Access and search our international database to return your
-          community's bikes to their rightful owners.
+          No more index cards or excel sheets. Give your citizens the tools to
+          register from a smartphone, in less than two minutes, and use these
+          registrations to recover and return stolen bikes.
 
         %p
-          You have the authority to bring bikes back - that’s no small
-          responsibility. That’s why we have tools - such as our integration
-          with LeadsOnline and #{link_to "automated tweets", "https://twitter.com/stolenbikessfo"}
-          of stolen bikes - to keep your community safe. Connect with
-          #{link_to "local ambassadors", "http://bikeindex.org/ambassadors_how_to"}
-          and spotters to quickly confiscate and block sales of stolen bikes.
-
-        %p
-          With over 215,000 registries and almost 5,500 stolen bicycle
-          recoveries, we know how to help.
+          Bring together bike shops, schools, municipal departments, and law
+          enforcement to register bikes in one system. Gone are the days of
+          waiting for people to not come in to register their bikes, or
+          wondering if that other department took care of it. Bike Index
+          consolidates everything in one manageable place.
 
 
         %p
-          = render partial: "/landing_pages/tweet", locals: { tweet_id: 839247587521679360 }
+          = render partial: "/landing_pages/tweet", locals: { tweet_id: 1033174779585605633 }
 
-        %h3 Put a lock on bike theft
-
-        %p
-          Our extensive archive has helped officers recover bikes involved in
-          criminal situations, from simple theft to chop shops, drug houses -
-          even fencing rings and online black markets.
+        %h3 Our community is your community
 
         %p
-          With over 600 partnerships, Bike Index is the industry leader in
-          bicycle registration. Join our network for free
-          #{link_to "here", "https://bikeindex.org/organizations/new"},
-          or ask us to put you in touch with an existing partner in law
-          enforcement.
+          Bike Index is the community registration system of choice. We are the
+          bike registration system of over 600 organizations - communities in
+          every corner of the country. Join the most widely used bike
+          registration network in the nation.
 
         %p
-          If you want to collaborate with other departments in your city to
-          manage a registry, learn more about Bike Index for municipalities
-          #{link_to "here", for_cities_path}.
+          Engage your residents and recover their bikes, and they will love you
+          forever.
 
-        %p
-          = render partial: "/landing_pages/tweet", locals: { tweet_id: 890211853942407168 }
+
+        %h4 Related articles:
+        %ul
+          %li
+            = link_to "Bike Index unveils partnership with the City of Palo Alto",
+            "https://bikeindex.org/news/bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa"
 
         .mobile-contact-link
           %a.btn.btn-primary.btn-lg{ href: new_organization_path }
