--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -21,7 +21,7 @@
               Bike Shops
               %span.chevron &raquo;
       .subheader-tile.col-md-3
-        = link_to for_law_enforcement_path, class: "subheader-tile-link" do
+        = link_to for_cities_path, class: "subheader-tile-link" do
           .subheader-image.bg-image-bike-cities
           .subheader-image-caption
             %em for&nbsp;
