Match bike shop packages hero to bike shop landing page

--- a/app/assets/stylesheets/revised/pages/landing/_signup.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_signup.scss
@@ -15,7 +15,7 @@
 
 $landing-page-targets: "shop", "school", "advocacy", "law_enforcement",
   "cities", "ambassadors-how-to", "ambassadors-current", "campus-packages",
-  "cities-packages";
+  "shop-packages", "cities-packages";
 
 @each $target in $landing-page-targets {
   .signup-landing-page-#{$target} {
