Consistify on "community groups"

--- a/app/assets/stylesheets/revised/pages/landing/_signup.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_signup.scss
@@ -13,7 +13,7 @@
   }
 }
 
-$landing-page-targets: "shop", "school", "advocacy", "law_enforcement",
+$landing-page-targets: "shop", "school", "community_groups", "law_enforcement",
   "cities", "ambassadors-how-to", "ambassadors-current", "campus-packages",
   "shop-packages", "cities-packages";
 
