--- a/app/views/landing_pages/for_community_groups.haml
+++ b/app/views/landing_pages/for_community_groups.haml
@@ -1,4 +1,4 @@
-- landing_page_target = "advocacy"
+- landing_page_target = "community_groups"
 
 .signup-landing-page{ class: "signup-landing-page-#{landing_page_target}" }
   %header.banner-header
@@ -7,8 +7,11 @@
         .icon-wrapper
           = render "/landing_pages/icons/header_#{landing_page_target}_svg"
         .banner-text
-          %h1 Bike Index for Advocacy Organizations
-          %h3 The most wide-reaching and effective tools against bike theft &mdash; period.
+          %h1
+            Bike Index for Community Groups
+          %h3
+            The most wide-reaching and effective tools against bike theft
+            &mdash; period.
 
   .container
     .row.main-body-row
