--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -37,7 +37,7 @@
               Schools
               %span.chevron &raquo;
       .subheader-tile.col-md-3
-        = link_to for_advocacy_path, class: "subheader-tile-link" do
+        = link_to for_community_groups_path, class: "subheader-tile-link" do
           .subheader-image.bg-image-bike-groups
           .subheader-image-caption
             %em for&nbsp;
