Add footer links

--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -5,37 +5,37 @@
         %nav.col-md-2.pull-right
           %h4 Bike Index
           %ul
-            %li= active_link "FAQ", ""
-            %li= active_link "Blog", ""
+            %li= active_link "FAQ", support_path
+            %li= active_link "Blog", news_index_path
             %li= active_link "Help", help_path
             %li= active_link "About", about_path
-            %li= active_link "Where We Are", ""
-            %li= active_link "Stolen Bike Recoveries", ""
+            %li= active_link "Where We Are", where_path
+            %li= active_link "Stolen Bike Recoveries", recovery_stories_path
 
         %nav.col-md-2.pull-right
           %h4 Support Us
           %ul
-            %li= active_link "Donate", ""
-            %li= active_link "Store", ""
-            %li= active_link "Ambassadors", ""
+            %li= active_link "Donate", support_bike_index_path
+            %li= active_link "Store", store_path
+            %li= active_link "Ambassadors", ambassadors_current_path
 
         %nav.col-md-2.pull-right
           %h4 Resources
           %ul
             %li= active_link "API documentation", documentation_index_path
-            %li= active_link "Dev Resources", ""
-            %li= active_link "Design & Logos", ""
-            %li= active_link "Bike Manufacturer List", ""
-            %li= active_link "Stolen Bike Map", ""
+            %li= active_link "Dev Resources", dev_and_design_path
+            %li= active_link "Design & Logos", image_resources_path
+            %li= active_link "Bike Manufacturer List", manufacturers_path
+            %li= active_link "Stolen Bike Map", "https://map.bikewise.org/"
 
         %nav.col-md-2.pull-right
           %h4 Who we serve
           %ul
-            %li= active_link "Bike Shops", ""
-            %li= active_link "Schools and Universities", ""
-            %li= active_link "Cities", ""
-            %li= active_link "Law Enforcement", ""
-            %li= active_link "Community Groups", ""
+            %li= active_link "Bike Shops", for_shops_path
+            %li= active_link "Schools and Universities", for_schools_path
+            %li= active_link "Cities", for_cities_path
+            %li= active_link "Law Enforcement", for_law_enforcement_path
+            %li= active_link "Community Groups", for_community_groups_path
 
         %nav.col-md-2.pull-right
 
