--- a/app/views/landing_pages/for_law_enforcement.haml
+++ b/app/views/landing_pages/for_law_enforcement.haml
@@ -13,6 +13,11 @@
             Is your department equipped to fight bike theft? Bike Index can help
             you get bikes back into the right hands.
 
+    .container.mobile-contact-link
+      .ribbon
+        %h2
+          = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
+
   .container
     .row.main-body-row
       .landing-why-col
@@ -70,10 +75,6 @@
           %li
             = link_to "Bike Index's newest municipal partner: New Orleans",
             "https://bikeindex.org/news/bike-indexs-newest-municipal-partner-new-orleans"
-
-        .mobile-contact-link
-          %a.btn.btn-primary.btn-lg{ href: new_organization_path }
-            Sign up for Bike Index
 
         .trusted-by.hidden-lg-up
           %h3
