--- a/app/views/landing_pages/for_shops.haml
+++ b/app/views/landing_pages/for_shops.haml
@@ -15,6 +15,13 @@
           %h3
             Do right by your customers in just 5 clicks.
 
+    .container.mobile-contact-link
+      .ribbon
+        %h2
+          = link_to bike_shop_packages_path, class: "btn btn-primary btn-lg" do
+            Features &amp; Pricing
+            %span.chevron &raquo;
+
   .container
     .row.main-body-row
       .landing-why-col
@@ -81,10 +88,6 @@
           %li
             = link_to "5 ways to grow community for your bike shop",
             "https://bikeindex.org/news/5-ways-to-grow-community-for-your-bike-shop"
-
-        .mobile-contact-link
-          %a.btn.btn-primary.btn-lg{ href: new_organization_path }
-            Sign up for Bike Index
 
         .trusted-by.hidden-lg-up
           %h3
