Normalize on 'community groups'

--- a/app/views/landing_pages/for_community_groups.haml
+++ b/app/views/landing_pages/for_community_groups.haml
@@ -65,14 +65,15 @@
 
         .trusted-by.hidden-lg-up
           %h3
-            Trusted by organizations everywhere
+            Trusted by community groups everywhere
           = image_tag "landing_pages/logos/community-groups.png", alt: "community group partners"
 
       .next-steps-col
         .next-steps-wrap
           %header
-            Keep organizations everywhere
+            Trusted by community groups everywhere
             = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
           .trusted-by
-            .header Trusted by organizations everywhere
+            .header
+              Used by community groups everywhere
             = image_tag "landing_pages/logos/community-groups.png", alt: "community group partners"
