--- a/app/views/landing_pages/for_schools.haml
+++ b/app/views/landing_pages/for_schools.haml
@@ -76,5 +76,6 @@
               Features &amp; Pricing
               %span.chevron &raquo;
           .trusted-by
-            .header Trusted by top universities
+            .header
+              Trusted by top universities
             = image_tag "landing_pages/logos/universities.png", alt: "university partners"
