--- a/app/views/landing_pages/for_cities.haml
+++ b/app/views/landing_pages/for_cities.haml
@@ -14,8 +14,8 @@
           %h3
             Plug your city in nationally.
 
-    .container.mobile-contact-link
-      .ribbon
+    .ribbon.mobile-contact-link
+      .container
         %h2
           = link_to cities_packages_path, class: "btn btn-primary btn-lg" do
             Features &amp; Pricing
