--- a/app/views/landing_pages/for_community_groups.haml
+++ b/app/views/landing_pages/for_community_groups.haml
@@ -13,8 +13,8 @@
             The most wide-reaching and effective tools against bike theft
             &mdash; period.
 
-    .container.mobile-contact-link
-      .ribbon
+    .ribbon.mobile-contact-link
+      .container
         %h2
           = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
 
