--- a/app/views/landing_pages/for_law_enforcement.haml
+++ b/app/views/landing_pages/for_law_enforcement.haml
@@ -13,8 +13,8 @@
             Is your department equipped to fight bike theft? Bike Index can help
             you get bikes back into the right hands.
 
-    .container.mobile-contact-link
-      .ribbon
+    .ribbon.mobile-contact-link
+      .container
         %h2
           = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
 
