--- a/app/views/landing_pages/for_schools.haml
+++ b/app/views/landing_pages/for_schools.haml
@@ -10,8 +10,8 @@
           %h1 Bike Index for Universities
           %h3 Protecting bikes on campus can be a full-time job. Let us help.
 
-    .container.mobile-contact-link
-      .ribbon
+    .ribbon.mobile-contact-link
+      .container
         %h2
           = link_to campus_packages_path, class: "btn btn-primary btn-lg" do
             Features &amp; Pricing
