--- a/app/views/landing_pages/for_shops.haml
+++ b/app/views/landing_pages/for_shops.haml
@@ -15,8 +15,8 @@
           %h3
             Do right by your customers in just 5 clicks.
 
-    .container.mobile-contact-link
-      .ribbon
+    .ribbon.mobile-contact-link
+      .container
         %h2
           = link_to bike_shop_packages_path, class: "btn btn-primary btn-lg" do
             Features &amp; Pricing
