Normalize on "bike_shops" from "shop" and "for_shops"

--- a/app/views/landing_pages/_footer.haml
+++ b/app/views/landing_pages/_footer.haml
@@ -14,7 +14,7 @@
           .col-xs-8
             %h4 Bike Shops
             %p Protect your customers' purchases
-            %a.btn.btn-lg.btn-outline-success{ href: for_shops_path }
+            %a.btn.btn-lg.btn-outline-success{ href: for_bike_shops_path }
               Learn More
       %li
         .landing-group-card
