--- a/app/views/landing_pages/for_bike_shops.haml
+++ b/app/views/landing_pages/for_bike_shops.haml
@@ -1,4 +1,4 @@
-- landing_page_target = "shop"
+- landing_page_target = "bike_shops"
 
 .signup-landing-page{ class: "signup-landing-page-#{landing_page_target}" }
   %header.banner-header
@@ -92,7 +92,7 @@
         .trusted-by.hidden-lg-up
           %h3
             Trusted by bike shops everywhere
-          = image_tag "landing_pages/logos/shops.png", alt: "bike shop partners"
+          = image_tag "landing_pages/logos/bike_shops.png", alt: "bike shop partners"
 
       .next-steps-col
         .next-steps-wrap
@@ -104,4 +104,4 @@
           .trusted-by
             .header
               Trusted by bike shops everywhere
-            = image_tag "landing_pages/logos/shops.png", alt: "bike shop partners"
+            = image_tag "landing_pages/logos/bike_shops.png", alt: "bike shop partners"
