--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -31,7 +31,7 @@
         %nav.col-md-2.pull-right
           %h4 Who we serve
           %ul
-            %li= active_link "Bike Shops", for_shops_path
+            %li= active_link "Bike Shops", for_bike_shops_path
             %li= active_link "Schools and Universities", for_schools_path
             %li= active_link "Cities", for_cities_path
             %li= active_link "Law Enforcement", for_law_enforcement_path
