--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -13,7 +13,7 @@
   .container-fluid.root-landing-banner-subheader
     .row
       .subheader-tile.col-md-3
-        = link_to for_shops_path, class: "subheader-tile-link" do
+        = link_to for_bike_shops_path, class: "subheader-tile-link" do
           .subheader-image.bg-image-bike-shops
           .subheader-image-caption
             %em for&nbsp;
