--- a/app/views/landing_pages/for_community_groups.haml
+++ b/app/views/landing_pages/for_community_groups.haml
@@ -1,6 +1,6 @@
 - landing_page_target = "community_groups"
 
-.signup-landing-page{ class: "signup-landing-page-#{landing_page_target}" }
+.signup-landing-page.landing-page{ class: "signup-landing-page-#{landing_page_target}" }
   %header.banner-header
     .container
       .row
