Set background of "used by" section

--- a/app/assets/stylesheets/revised/pages/landing/_home.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_home.scss
@@ -424,11 +424,13 @@
 }
 
 .root-landing-who {
+  background-color: #f9f9f9;
   padding-bottom: 6 * $vertical-height;
 
   h3.landing-container-label {
     color: $gray-darker;
     margin: (2 * $vertical-height) 0;
+    padding-top: 2rem;
 
     @include media-breakpoint-up(lg) {
       margin: (4 * $vertical-height) 0;
