--- a/app/assets/stylesheets/revised/pages/landing/_home.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_home.scss
@@ -111,39 +111,43 @@
 .bg-image-bike-hero {
   background-image: image-url("landing_pages/header_bg_root-full.jpg");
   background-size: cover;
-  background-position: center bottom;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
 .bg-image-bike-shops {
   background-image: image-url("landing_pages/bike-shop.jpg");
   background-size: cover;
-  background-position: center bottom;
+  background-position: top;
   background-repeat: no-repeat;
 }
 
 .bg-image-bike-cities {
   background-image: image-url("landing_pages/cities.jpg");
   background-size: cover;
-  background-position: left bottom;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
 .bg-image-bike-schools {
   background-image: image-url("landing_pages/schools.jpg");
   background-size: cover;
-  background-position: right bottom;
+  background-position: top;
   background-repeat: no-repeat;
 }
 
 .bg-image-bike-groups {
   background-image: image-url("landing_pages/groups.jpg");
   background-size: cover;
-  background-position: center bottom;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 767px) {
+@include media-breakpoint-up(lg) {
+  .bg-image-bike-hero {
+    background-position: bottom;
+  }
+
   .bg-image-bike-shops {
     background-position: center top;
   }
@@ -160,7 +164,6 @@
     background-position: center center;
   }
 }
-
 
 // TODO: Optimize images
 @media screen and (min-device-width: 1000px) {
