--- a/app/views/admin/organization_invitations/show.html.haml
+++ b/app/views/admin/organization_invitations/show.html.haml
@@ -1,21 +1,22 @@
-%h1
-  Manage
-  %strong
-    #{@organization.name}'s
-  Invitations
-%p
-  = link_to "Back to organization", admin_organization_url(@organization)
+%header.with-subtitle
+  %h1
+    Manage
+    %strong
+      #{@organization.name}'s
+    Invitations
+  %p
+    = link_to "Back to organization", admin_organization_url(@organization)
 
-
-%hr
-%h2
-  Invitations
-%h3.organization-description-list
-  #{@organization.name} has sent #{pluralize(@organization.sent_invitation_count, "invitation")},
-  %br
-  and has
-  = @organization.available_invitation_count
-  remaining #{"invitation".pluralize(current_organization.available_invitation_count)}.
+.invitations
+  %hr
+  %h2
+    Invitations
+  %h3.organization-description-list
+    #{@organization.name} has sent #{pluralize(@organization.sent_invitation_count, "invitation")},
+    %br
+    and has
+    = @organization.available_invitation_count
+    remaining #{"invitation".pluralize(current_organization.available_invitation_count)}.
   %hr
 
 - if @organization.organization_invitations.any?
