--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -9,7 +9,8 @@
         %h1.upcase
           Bike registration that works
         %h2
-          Find out how &raquo;
+          = link_to new_organization_path do
+            Find out how &raquo;
   .container-fluid.root-landing-banner-subheader
     .row
       .subheader-tile.col-md-3
