change controller actions

--- a/app/views/admin/organization_invitations/show.html.haml
+++ b/app/views/admin/organization_invitations/show.html.haml
@@ -1,42 +1,41 @@
-%header.with-subtitle
-  %h1
-    Manage
-    %strong
-      #{@organization.name}'s
-    Invitations
-  %p
-    = link_to "Back to organization", admin_organization_url(@organization)
+%h1
+  Manage
+  %strong
+    #{@organization.name}'s
+  Invitations
+%p
+  = link_to "Back to organization", admin_organization_url(@organization)
 
-.invitations
-  %hr
-  %h2
-    Invitations
-  %h3.organization-description-list
-    #{@organization.name} has sent #{pluralize(@organization.sent_invitation_count, "invitation")},
-    %br
-    and has
-    = @organization.available_invitation_count
-    remaining #{"invitation".pluralize(current_organization.available_invitation_count)}.
+
+%hr
+%h2
+  Invitations
+%h3
+  #{@organization.name} has sent #{pluralize(@organization.sent_invitation_count, "invitation")},
+  %br
+  and has
+  = @organization.available_invitation_count
+  remaining #{"invitation".pluralize(current_organization.available_invitation_count)}.
   %hr
 
 - if @organization.organization_invitations.any?
-  %section.full-screen-table
-    %table.table.table-striped
-      %thead
+  .full-screen-table
+    %table.table.table-striped.table-sm
+      %thead.thead-light
         %th
           Id&nbsp;
-        %th.large-screens
+        %th
           Date sent
-        %th.medium-screens
+        %th.d-none.d-lg-table-cell
           Name
         %th
           Email
-        %th.medium-screens
+        %th.d-none.d-lg-table-cell
           Role
         %th
           Organization
         %th
-          %span.medium-screens
+          %span.d-none.d-lg-table-cell
             Redeemed
 
       %tbody
@@ -44,14 +43,14 @@
           %tr
             %td
               = link_to org_invite.id, admin_organization_invitation_url(org_invite.id, organization_id: @organization.to_param)
-            %td.large-screens
+            %td
               = org_invite.created_at.strftime("%-I %p on %-m/%-d/%Y ")
-            %td.medium-screens
+            %td.d-none.d-lg-table-cell
               - if org_invite.invitee_name
                 = org_invite.invitee_name
             %td
               = org_invite.invitee_email
-            %td.medium-screens
+            %td.d-none.d-lg-table-cell
               = org_invite.membership_role
             %td
               = link_to org_invite.organization.name, admin_organization_url(org_invite.organization.name)
@@ -60,5 +59,4 @@
 
 
 - if @organization.available_invitation_count > 0
-  .well.span6.padded
-    = render partial: "/admin/organization_invitations/form"
+  = render partial: "/admin/organization_invitations/form"
