Link to ambassadors how to page

--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -17,7 +17,7 @@
           %ul
             %li= active_link "Donate", support_bike_index_path
             %li= active_link "Store", store_path
-            %li= active_link "Ambassadors", ambassadors_current_path
+            %li= active_link "Ambassadors", ambassadors_how_to_path
 
         %nav.col-md-2.pull-right
           %h4 Resources
