Consistify styling on ambassadors pages

--- a/app/views/landing_pages/ambassadors_current.haml
+++ b/app/views/landing_pages/ambassadors_current.haml
@@ -1,4 +1,4 @@
-.signup-landing-page.signup-landing-page-ambassadors.signup-landing-page-ambassadors-current
+.signup-landing-page.landing-page.signup-landing-page-ambassadors.signup-landing-page-ambassadors-current
   %header.banner-header
     .container
       .row
