--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -51,14 +51,38 @@
         view all bikes
   %a.float-right.less-strong.hidden-xs-down{ href: "#organizedSearchSettings", "aria-controls" => "organizedSearchSettings", "data-toggle" => "collapse", style: "margin: 0 .5rem; color: #bbb" }
     settings
-- column_renames = { "created_at_cell" => "Registered", "updated_at_cell" => "Updated", "stolen_cell" => "Stolen", "manufacturer_cell" => "Manufacturer", "model_cell" => "Model", "color_cell" => "Color", "owner_email_cell" => "Sent to", "owner_name_cell" => "Owner name", "reg_affiliation_cell" => "Affiliation", "reg_secondary_serial_cell" => "Secondary#", "reg_phone_cell" => "Phone", "reg_address_cell" => "Address", "sticker_cell" => "Sticker" }
-.collapse#organizedSearchSettings.settings-list
+:ruby
+  column_renames = {
+    "created_at_cell" => "Registered",
+    "updated_at_cell" => "Updated",
+    "stolen_cell" => "Stolen",
+    "manufacturer_cell" => "Manufacturer",
+    "model_cell" => "Model",
+    "color_cell" => "Color",
+    "owner_email_cell" => "Sent to",
+    "owner_name_cell" => "Owner name",
+    "reg_affiliation_cell" => "Affiliation",
+    "reg_secondary_serial_cell" => "Secondary#",
+    "reg_phone_cell" => "Phone",
+    "reg_address_cell" => "Address",
+    "sticker_cell" => "Sticker",
+  }
+  optional_columns = current_organization.paid_for?("bike_codes") ? ["sticker_cell"] : []
+  optional_columns += current_organization.additional_registration_fields.map { |f| "#{f}_cell" }
+  default_columns = %w[created_at_cell
+                       stolen_cell
+                       manufacturer_cell
+                       model_cell
+                       color_cell
+                       owner_email_cell
+                       updated_at_cell
+                       owner_name_cell]
+  enabled_columns = (default_columns + optional_columns)
+.collapse#organizedSearchSettings.settings-list{ "data-defaultcols" => enabled_columns.to_json }
   %h3.header-font-alt
     Visible columns
   .row
-    - optional_columns = current_organization.paid_for?("bike_codes") ? ["sticker_cell"] : []
-    - optional_columns += current_organization.additional_registration_fields.map { |f| "#{f}_cell" }
-    - (%w[created_at_cell stolen_cell manufacturer_cell model_cell color_cell owner_email_cell updated_at_cell owner_name_cell] + optional_columns).each do |cell_name|
+    - enabled_columns.each do |cell_name|
       .col-xs-6.col-md-4
         .form-group
           %label
