Link "Register Now" to new bike path

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -9,8 +9,9 @@
         %h1.upcase
           Bike registration that works
         %h2
-          = link_to new_organization_path do
-            Find out how &raquo;
+          = link_to new_bike_path do
+            Register Now
+            %span.chevron &raquo;
   .container-fluid.root-landing-banner-subheader
     .row
       .subheader-tile.col-md-3
