Swap alternating background colors

--- a/app/assets/stylesheets/revised/pages/landing/_home.scss
+++ b/app/assets/stylesheets/revised/pages/landing/_home.scss
@@ -349,7 +349,8 @@
 }
 
 .root-landing-how-it-works {
-  padding-top: 4 * $vertical-height;
+  background-color: #f9f9f9;
+  padding: 4 * $vertical-height 0;
 
   h3.landing-container-label,
   h4 {
@@ -446,13 +447,11 @@
 }
 
 .root-landing-who {
-  background-color: #f9f9f9;
   padding-bottom: 6 * $vertical-height;
 
   h3.landing-container-label {
     color: $gray-darker;
     margin: (2 * $vertical-height) 0;
-    padding-top: 2rem;
 
     @include media-breakpoint-up(lg) {
       margin: (4 * $vertical-height) 0;
